Fix build on JDK 17